[v1.0.4] Changed LinkedList<Requests> to ArrayList<Requests> for random access performance gains. Removed iterator over requestQueue as it is now ArrayList.